tests2/tests/snapshots/test__jsdoc__inline-deserialize.snap
---
source: tests2/tests/jsdoc.rs
expression: "JSDoc::default().with_serde(mode).bigint(BigIntExportBehavior::Number).export(&crate::types().0).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.


/**
	*/

/**
	* @typedef {{ 
	*		a: B,
	*		b: B,
	*		c: B,
	*		d: D,
	*		e: GenericFlattened<number>,
	*	}} A
	*/
/**
	* @typedef {{ 
	*		field: Demo<T, boolean>,
	*	}} AGenericStruct<T>
	*/
/**
	* @typedef {{ 
	*		a: GenericType<string>,
	*	}} ActualType
	*/
/**
	* @typedef {{ 
	*		b: number,
	*	}} B
	*/
/**
	* @typedef {"A" | "B"} BasicEnum
	*/
/**
	* @typedef {{ 
	*		b: BoxedInner,
	*	}} BoxFlattened
	*/
/**
	* @typedef {{ 
	*		c: BoxedInner,
	*	}} BoxInline
	*/
/**
	* @typedef {{ 
	*		a: number,
	*	}} BoxedInner
	*/
/**
	* @typedef {string} BracedStruct
	*/
/**
	*  Some triple-slash comment
	*  Some more triple-slash comment
	*
	* @typedef {{ A: number } | { B: { a: number } }} CommentedEnum
	*/
/**
	*  Some triple-slash comment
	*  Some more triple-slash comment
	*
	* @typedef {{ 
	*		a: number,
	*	}} CommentedStruct
	*/
/**
	* @typedef {{ 
	*		flattened: number,
	*	}} D
	*/
/**
	* @typedef {{ 
	*		a: A,
	*		b: B,
	*	}} Demo<A, B>
	*/
/**
	* @typedef {"A" | "B" | "C"} DeprecatedEnumVariants
	*/
/**
	* @typedef {{ 
	*		a: number,
	*		b: string,
	*		c: string,
	*		d: string,
	*	}} DeprecatedFields
	*/
/**
	* @typedef {[string, string, number]} DeprecatedTupleVariant
	*/
/**
	* @deprecated
	* @typedef {{ 
	*		a: number,
	*	}} DeprecatedType
	*/
/**
	* @deprecated Look at you big man using a deprecation message
	* @typedef {{ 
	*		a: number,
	*	}} DeprecatedTypeWithMsg
	*/
/**
	* @deprecated Look at you big man using a deprecation message
	* @typedef {{ 
	*		a: number,
	*	}} DeprecatedTypeWithMsg2
	*/
/**
	* @typedef {{ 
	*		a: ToBeFlattened,
	*		b: ToBeFlattened,
	*	}} DoubleFlattened
	*/
/**
	* @typedef {{ A: string } | "B"} Eight
	*/
/**
	* @typedef {{ A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } }} EnumMacroAttributes
	*/
/**
	* @typedef {{ 
	*		a: Partial<{ [key in BasicEnum]: number }>,
	*	}} EnumReferenceRecordKey
	*/
/**
	* @typedef {{ A: string }} ExtraBracketsInTupleVariant
	*/
/**
	* @typedef {string} ExtraBracketsInUnnamedStruct
	*/
/**
	* @typedef {{ 
	*		type: "Fifth",
	*		a: First,
	*		b: First,
	*	}} Fifth
	*/
/**
	* @typedef {{ 
	*		a: string,
	*	}} First
	*/
/**
	* @typedef {{ tag: "One" } | { tag: "Two" } | { tag: "Three" }} FlattenEnum
	*/
/**
	* @typedef {(FlattenEnum) & { 
	*		outer: string,
	*	}} FlattenEnumStruct
	*/
/**
	* @typedef {(NestedEnum) & { 
	*		id: string,
	*	}} FlattenOnNestedEnum
	*/
/**
	* @typedef {{ 
	*		c: Inner,
	*	}} FlattenedInner
	*/
/**
	* @typedef {{ 
	*		a: First,
	*		b: First,
	*	}} Fourth
	*/
/**
	* @typedef {{ 
	*		generic_flattened: T,
	*	}} GenericFlattened<T>
	*/
/**
	* @typedef {{ 
	*		arg: T,
	*	}} GenericStruct<T>
	*/
/**
	* @typedef {T} GenericTupleStruct<T>
	*/
/**
	* @typedef {"Undefined" | T} GenericType<T>
	*/
/**
	* @typedef {{ [key in number]: string }} HasGenericAlias
	*/
/**
	* @typedef {{ A: PlaceholderInnerField }} InlineEnumField
	*/
/**
	* @typedef {{ 
	*		optional_field: PlaceholderInnerField | null,
	*	}} InlineOptionalType
	*/
/**
	* @typedef {{ 
	*		ref_struct: SimpleStruct,
	*		val: number,
	*	}} InlineStruct
	*/
/**
	* @typedef {{ 
	*		demo: [string, boolean],
	*	}} InlineTuple
	*/
/**
	* @typedef {{ 
	*		demo: [InlineTuple, boolean],
	*	}} InlineTuple2
	*/
/**
	* @typedef {{ 
	*		inline_this: InlineStruct,
	*		dont_inline_this: RefStruct,
	*	}} InlinerStruct
	*/
/**
	* @typedef {{ 
	*		a: number,
	*		b: FlattenedInner,
	*	}} Inner
	*/
/**
	* @typedef {{ 
	*		cause: null | null,
	*	}} InvalidToValidType
	*/
/**
	* @typedef {{ 
	*		default_unity_arguments: string[],
	*	}} Issue281
	*/
/**
	*  https://github.com/specta-rs/specta/issues/374
	*
	* @typedef {{ 
	*		foo: boolean,
	*		bar: boolean,
	*	}} Issue374
	*/
/**
	* @typedef {{ 
	*		"test-ing": string,
	*	}} KebabCase
	*/
/**
	* @typedef {{ Demo: string } | { Demo2: { demo2: string } }} MacroEnum
	*/
/**
	* @typedef {string} MacroStruct
	*/
/**
	* @typedef {{ 
	*		demo: string,
	*	}} MacroStruct2
	*/
/**
	* @typedef {Record<string, never>} MyEmptyInput
	*/
/**
	* @typedef {{ A: string } | { B: number }} MyEnum
	*/
/**
	* @typedef {{ t: "Variant"; c: (First) }} MyEnumAdjacent
	*/
/**
	* @typedef {{ Variant: (First) }} MyEnumExternal
	*/
/**
	* @typedef {(First) & { type: "Variant" }} MyEnumTagged
	*/
/**
	* @typedef {(First)} MyEnumUntagged
	*/
/**
	* @typedef {{ type: "a"; value: string } | { type: "b"; value: number }} NestedEnum
	*/
/**
	* @typedef {string | null} NonOptional
	*/
/**
	* @typedef {{ A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } }} OptionalInEnum
	*/
/**
	* @typedef {string | null} OptionalOnNamedField
	*/
/**
	* @typedef {{ 
	*		b: string | null,
	*	}} OptionalOnTransparentNamedField
	*/
/**
	* @typedef {string | null} OptionalOnTransparentNamedFieldInner
	*/
/**
	* @typedef {{ 
	*		overriden_field: string,
	*	}} OverridenStruct
	*/
/**
	* @typedef {{ 
	*		a: string,
	*	}} PlaceholderInnerField
	*/
/**
	* @typedef {{ 
	*		"1": number,
	*		"2": number,
	*		"3": number,
	*		"4": number,
	*		"5": number,
	*		"6": number,
	*		"7": number,
	*		"8": number,
	*		"9": number,
	*		a: number,
	*		b: number,
	*		c: number,
	*		d: number,
	*		e: number,
	*		f: boolean,
	*		"10": string,
	*		"11": { 
	start: number,
	end: number,
},
	*		"12": { 
	start: number,
	end: number,
},
	*		"13": null,
	*		"14": [string, number],
	*		"15": [string, number, boolean],
	*		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
	*		"17": string,
	*		"18": string,
	*		"19": string,
	*		"1a": string,
	*		"1b": string,
	*		"1c": string,
	*		"1d": string,
	*		"1e": string,
	*		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
	*		"20": { 
	secs: number,
	nanos: number,
},
	*		"21": string,
	*		"22": boolean,
	*		"23": number,
	*		"24": number[],
	*		"25": number[],
	*		"26": number[],
	*		"27": MyEnum[],
	*		"28": MyEnum[],
	*		"29": MyEnum[],
	*		"2a": number[],
	*		"2b": number[],
	*		"2c": number | null,
	*		"2d": null | null,
	*		"2e": Unit1,
	*		"2f": Unit2,
	*		"30": Unit3,
	*		"31": Unit4,
	*		"32": Unit5,
	*		"33": Unit6,
	*		"34": Unit7,
	*		"35": SimpleStruct,
	*		"36": TupleStruct1,
	*		"37": TupleStruct3,
	*		"38": TestEnum,
	*		"39": RefStruct,
	*		"3a": InlinerStruct,
	*		"3b": GenericStruct<number>,
	*		"3c": GenericStruct<string>,
	*		"3d": FlattenEnumStruct,
	*		"3e": OverridenStruct,
	*		"3f": HasGenericAlias,
	*		"40": SkipVariant,
	*		"41": SkipVariant2,
	*		"42": SkipVariant3,
	*		"43": EnumMacroAttributes,
	*		"44": InlineEnumField,
	*		"45": InlineOptionalType,
	*		"46": Rename,
	*		"47": TransparentType,
	*		"48": TransparentType2,
	*		"49": TransparentTypeWithOverride,
	*		"4a": (number | null)[],
	*		"4b": Partial<{ [key in BasicEnum]: null }>,
	*		"4c": number | null,
	*		"4d": PlaceholderInnerField[],
	*		"4e": Partial<{ [key in BasicEnum]: number }>,
	*		"4f": EnumReferenceRecordKey,
	*		"50": FlattenOnNestedEnum,
	*		"51": null,
	*		"52": null,
	*		"53": never,
	*		"54": MyEmptyInput,
	*		"55": string,
	*		"56": [string],
	*		"57": ExtraBracketsInTupleVariant,
	*		"58": ExtraBracketsInUnnamedStruct,
	*		"59": MyEnum[],
	*		"5a": InlineTuple,
	*		"5b": InlineTuple2,
	*		"5c": string,
	*		"5d": string,
	*		"5e": SkippedFieldWithinVariant,
	*		"5f": KebabCase,
	*		"60": string[],
	*		"61": Issue281,
	*		"62": RenameWithWeirdCharsField,
	*		"63": RenameWithWeirdCharsVariant,
	*		"64": Issue374,
	*		"65": Type,
	*		"66": ActualType,
	*		"67": SpectaTypeOverride,
	*		"68": InvalidToValidType,
	*		"69": TupleStruct,
	*		"6a": TupleStructWithRep,
	*		"6b": GenericTupleStruct<string>,
	*		"6c": BracedStruct,
	*		"6d": Recursive,
	*		"6e": RecursiveMapValue,
	*		"6f": RecursiveTransparent,
	*		"70": RecursiveInEnum,
	*		"71": NonOptional,
	*		"72": OptionalOnNamedField,
	*		"73": OptionalOnTransparentNamedField,
	*		"74": OptionalInEnum,
	*		"75": { [key in string]: null },
	*		"76": Regular,
	*		"77": { [key in never]: null },
	*		"78": Partial<{ [key in UnitVariants]: null }>,
	*		"79": Partial<{ [key in UntaggedVariants]: null }>,
	*		"7a": Partial<{ [key in Variants]: null }>,
	*		"7b": MacroStruct,
	*		"7c": MacroStruct2,
	*		"7d": MacroEnum,
	*		"7e": DeprecatedType,
	*		"7f": DeprecatedTypeWithMsg,
	*		"80": DeprecatedTypeWithMsg2,
	*		"81": DeprecatedFields,
	*		"82": DeprecatedTupleVariant,
	*		"83": DeprecatedEnumVariants,
	*		"84": CommentedStruct,
	*		"85": CommentedEnum,
	*		"86": SingleLineComment,
	*		"87": Demo<number, boolean>,
	*		"88": Demo<number, boolean>,
	*		"89": Demo<number, boolean>,
	*		"8a": Demo<number, boolean>,
	*		"8b": Demo<number, boolean>,
	*		"8c": { [key in string]: number },
	*		"8d": { [key in number]: string },
	*		"8e": { [key in string]: AGenericStruct<number> },
	*		"8f": AGenericStruct<number>,
	*		"90": A,
	*		"91": DoubleFlattened,
	*		"92": FlattenedInner,
	*		"93": BoxFlattened,
	*		"94": BoxInline,
	*		"95": First,
	*		"96": Second,
	*		"97": Third,
	*		"98": Fourth,
	*		"99": Fifth,
	*		"9a": Sixth,
	*		"9b": Seventh,
	*		"9c": Eight,
	*		"9d": Tenth,
	*		"9e": MyEnumTagged,
	*		"9f": MyEnumExternal,
	*		a0: MyEnumAdjacent,
	*		a1: MyEnumUntagged,
	*	}} Primitives
	*/
/**
	* @typedef {{ 
	*		demo: Recursive,
	*	}} Recursive
	*/
/**
	* @typedef {{ A: (RecursiveInEnum) }} RecursiveInEnum
	*/
/**
	* @typedef {(RecursiveInline)} RecursiveInline
	*/
/**
	* @typedef {{ 
	*		demo: { [key in string]: RecursiveMapValue },
	*	}} RecursiveMapValue
	*/
/**
	* @typedef {RecursiveInline} RecursiveTransparent
	*/
/**
	* @typedef {TestEnum} RefStruct
	*/
/**
	* @typedef {{ [key in string]: null }} Regular
	*/
/**
	* @typedef {"OneWord" | "Two words"} Rename
	*/
/**
	* @typedef {{ 
	*		odata_context: string,
	*	}} RenameWithWeirdCharsField
	*/
/**
	* @typedef {{ "@odata.context": string }} RenameWithWeirdCharsVariant
	*/
/**
	* @typedef {{ 
	*		a: number,
	*	}} Second
	*/
/**
	* @typedef {{ 
	*		a: First,
	*		b: Second,
	*	}} Seventh
	*/
/**
	* @typedef {{ 
	*		a: number,
	*		b: string,
	*		c: [number, string, number],
	*		d: string[],
	*		e: string | null,
	*	}} SimpleStruct
	*/
/**
	*  Some single-line comment
	*
	* @typedef {{ A: number } | { B: { a: number } }} SingleLineComment
	*/
/**
	* @typedef {{ 
	*		a: First,
	*		b: First,
	*	}} Sixth
	*/
/**
	* @typedef {{ A: string }} SkipVariant
	*/
/**
	* @typedef {{ tag: "A"; data: string }} SkipVariant2
	*/
/**
	* @typedef {{ A: { a: string } }} SkipVariant3
	*/
/**
	* @typedef {{ type: "A"; data: null } | { type: "B"; data: string }} SkippedFieldWithinVariant
	*/
/**
	* @typedef {{ 
	*		string_ident: string,
	*		u32_ident: number,
	*		path: string,
	*	}} SpectaTypeOverride
	*/
/**
	* @typedef {string | "B" | First} Tenth
	*/
/**
	* @typedef {"Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } }} TestEnum
	*/
/**
	* @typedef {(First) & { 
	*		b: { [key in string]: string },
	*		c: First,
	*	}} Third
	*/
/**
	* @typedef {{ 
	*		a: string,
	*	}} ToBeFlattened
	*/
/**
	* @typedef {TransparentTypeInner} TransparentType
	*/
/**
	* @typedef {null} TransparentType2
	*/
/**
	* @typedef {{ 
	*		inner: string,
	*	}} TransparentTypeInner
	*/
/**
	* @typedef {string} TransparentTypeWithOverride
	*/
/**
	* @typedef {string} TupleStruct
	*/
/**
	* @typedef {number} TupleStruct1
	*/
/**
	* @typedef {[number, boolean, string]} TupleStruct3
	*/
/**
	* @typedef {string} TupleStructWithRep
	*/
/**
	* @typedef {never} Type
	*/
/**
	* @typedef {null} Unit1
	*/
/**
	* @typedef {Record<string, never>} Unit2
	*/
/**
	* @typedef {[]} Unit3
	*/
/**
	* @typedef {null} Unit4
	*/
/**
	* @typedef {"A"} Unit5
	*/
/**
	* @typedef {{ A: [] }} Unit6
	*/
/**
	* @typedef {{ A: Record<string, never> }} Unit7
	*/
/**
	* @typedef {"A" | "B" | "C"} UnitVariants
	*/
/**
	* @typedef {string | number} UntaggedVariants
	*/
/**
	* @typedef {{ 
	*		name: name,
	*		age: age,
	*	}} UserListSelection<name, age>
	*/
/**
	* @typedef {{ 
	*		name: name,
	*		age: age,
	*	}} UserSelection<name, age>
	*/
/**
	* @typedef {{ A: string } | { B: number } | { C: number }} Variants
	*/
