tests2/tests/snapshots/test__jsdoc__inline-serialize.snap
---
source: tests2/tests/jsdoc.rs
expression: "JSDoc::default().with_serde(mode).bigint(BigIntExportBehavior::Number).export(&crate::types().0).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.


/**
	*/

/**
	* @typedef {"A" | "B"} BasicEnum
	*/
/**
	* @typedef {{ A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } }} EnumMacroAttributes
	*/
/**
	* @typedef {{ 
	*		a: Partial<{ [key in BasicEnum]: number }>,
	*	}} EnumReferenceRecordKey
	*/
/**
	* @typedef {{ A: string }} ExtraBracketsInTupleVariant
	*/
/**
	* @typedef {string} ExtraBracketsInUnnamedStruct
	*/
/**
	* @typedef {{ tag: "One" } | { tag: "Two" } | { tag: "Three" }} FlattenEnum
	*/
/**
	* @typedef {(FlattenEnum) & { 
	*		outer: string,
	*	}} FlattenEnumStruct
	*/
/**
	* @typedef {(NestedEnum) & { 
	*		id: string,
	*	}} FlattenOnNestedEnum
	*/
/**
	* @typedef {{ 
	*		arg: T,
	*	}} GenericStruct<T>
	*/
/**
	* @typedef {{ [key in number]: string }} HasGenericAlias
	*/
/**
	* @typedef {{ A: PlaceholderInnerField }} InlineEnumField
	*/
/**
	* @typedef {{ 
	*		optional_field: PlaceholderInnerField | null,
	*	}} InlineOptionalType
	*/
/**
	* @typedef {{ 
	*		ref_struct: SimpleStruct,
	*		val: number,
	*	}} InlineStruct
	*/
/**
	* @typedef {{ 
	*		demo: [string, boolean],
	*	}} InlineTuple
	*/
/**
	* @typedef {{ 
	*		demo: [InlineTuple, boolean],
	*	}} InlineTuple2
	*/
/**
	* @typedef {{ 
	*		inline_this: InlineStruct,
	*		dont_inline_this: RefStruct,
	*	}} InlinerStruct
	*/
/**
	* @typedef {{ 
	*		default_unity_arguments: string[],
	*	}} Issue281
	*/
/**
	*  https://github.com/specta-rs/specta/issues/374
	*
	* @typedef {{ 
	*		foo: boolean,
	*		bar: boolean,
	*	}} Issue374
	*/
/**
	* @typedef {{ 
	*		"test-ing": string,
	*	}} KebabCase
	*/
/**
	* @typedef {Record<string, never>} MyEmptyInput
	*/
/**
	* @typedef {{ A: string } | { B: number }} MyEnum
	*/
/**
	* @typedef {{ type: "a"; value: string } | { type: "b"; value: number }} NestedEnum
	*/
/**
	* @typedef {{ 
	*		overriden_field: string,
	*	}} OverridenStruct
	*/
/**
	* @typedef {{ 
	*		a: string,
	*	}} PlaceholderInnerField
	*/
/**
	* @typedef {{ 
	*		"1": number,
	*		"2": number,
	*		"3": number,
	*		"4": number,
	*		"5": number,
	*		"6": number,
	*		"7": number,
	*		"8": number,
	*		"9": number,
	*		a: number,
	*		b: number,
	*		c: number,
	*		d: number,
	*		e: number,
	*		f: boolean,
	*		"10": string,
	*		"11": { 
	start: number,
	end: number,
},
	*		"12": { 
	start: number,
	end: number,
},
	*		"13": null,
	*		"14": [string, number],
	*		"15": [string, number, boolean],
	*		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
	*		"17": string,
	*		"18": string,
	*		"19": string,
	*		"1a": string,
	*		"1b": string,
	*		"1c": string,
	*		"1d": string,
	*		"1e": string,
	*		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
	*		"20": { 
	secs: number,
	nanos: number,
},
	*		"21": string,
	*		"22": boolean,
	*		"23": number,
	*		"24": number[],
	*		"25": number[],
	*		"26": number[],
	*		"27": MyEnum[],
	*		"28": MyEnum[],
	*		"29": MyEnum[],
	*		"2a": number[],
	*		"2b": number[],
	*		"2c": number | null,
	*		"2d": null | null,
	*		"2e": Unit1,
	*		"2f": Unit2,
	*		"30": Unit3,
	*		"31": Unit4,
	*		"32": Unit5,
	*		"33": Unit6,
	*		"34": Unit7,
	*		"35": SimpleStruct,
	*		"36": TupleStruct1,
	*		"37": TupleStruct3,
	*		"38": TestEnum,
	*		"39": RefStruct,
	*		"3a": InlinerStruct,
	*		"3b": GenericStruct<number>,
	*		"3c": GenericStruct<string>,
	*		"3d": FlattenEnumStruct,
	*		"3e": OverridenStruct,
	*		"3f": HasGenericAlias,
	*		"40": SkipVariant,
	*		"41": SkipVariant2,
	*		"42": SkipVariant3,
	*		"43": EnumMacroAttributes,
	*		"44": Recursive,
	*		"45": InlineEnumField,
	*		"46": InlineOptionalType,
	*		"47": Rename,
	*		"48": TransparentType,
	*		"49": TransparentType2,
	*		"4a": TransparentTypeWithOverride,
	*		"4b": (number | null)[],
	*		"4c": Partial<{ [key in BasicEnum]: null }>,
	*		"4d": number | null,
	*		"4e": PlaceholderInnerField[],
	*		"4f": Partial<{ [key in BasicEnum]: number }>,
	*		"50": EnumReferenceRecordKey,
	*		"51": FlattenOnNestedEnum,
	*		"52": null,
	*		"53": null,
	*		"54": never,
	*		"55": MyEmptyInput,
	*		"56": string,
	*		"57": [string],
	*		"58": ExtraBracketsInTupleVariant,
	*		"59": ExtraBracketsInUnnamedStruct,
	*		"5a": MyEnum[],
	*		"5b": InlineTuple,
	*		"5c": InlineTuple2,
	*		"5d": string,
	*		"5e": string,
	*		"5f": SkippedFieldWithinVariant,
	*		"60": KebabCase,
	*		"61": string[],
	*		"62": Issue281,
	*		"63": RenameWithWeirdCharsField,
	*		"64": RenameWithWeirdCharsVariant,
	*		"65": Issue374,
	*		"66": Type,
	*	}} Primitives
	*/
/**
	* @typedef {{ 
	*		a: number,
	*		children: Recursive[],
	*	}} Recursive
	*/
/**
	* @typedef {TestEnum} RefStruct
	*/
/**
	* @typedef {"OneWord" | "Two words"} Rename
	*/
/**
	* @typedef {{ 
	*		odata_context: string,
	*	}} RenameWithWeirdCharsField
	*/
/**
	* @typedef {{ "@odata.context": string }} RenameWithWeirdCharsVariant
	*/
/**
	* @typedef {{ 
	*		a: number,
	*		b: string,
	*		c: [number, string, number],
	*		d: string[],
	*		e: string | null,
	*	}} SimpleStruct
	*/
/**
	* @typedef {{ A: string }} SkipVariant
	*/
/**
	* @typedef {{ tag: "A"; data: string }} SkipVariant2
	*/
/**
	* @typedef {{ A: { a: string } }} SkipVariant3
	*/
/**
	* @typedef {{ type: "A"; data: null } | { type: "B"; data: string }} SkippedFieldWithinVariant
	*/
/**
	* @typedef {"Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } }} TestEnum
	*/
/**
	* @typedef {TransparentTypeInner} TransparentType
	*/
/**
	* @typedef {null} TransparentType2
	*/
/**
	* @typedef {{ 
	*		inner: string,
	*	}} TransparentTypeInner
	*/
/**
	* @typedef {string} TransparentTypeWithOverride
	*/
/**
	* @typedef {number} TupleStruct1
	*/
/**
	* @typedef {[number, boolean, string]} TupleStruct3
	*/
/**
	* @typedef {never} Type
	*/
/**
	* @typedef {null} Unit1
	*/
/**
	* @typedef {Record<string, never>} Unit2
	*/
/**
	* @typedef {[]} Unit3
	*/
/**
	* @typedef {null} Unit4
	*/
/**
	* @typedef {"A"} Unit5
	*/
/**
	* @typedef {{ A: [] }} Unit6
	*/
/**
	* @typedef {{ A: Record<string, never> }} Unit7
	*/
